# cs3202

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  Makefile.am  Makefile.in  README.md  Simple3201.sln  TODO.md  ZERO_CHECK.vcxproj  auto_tester.vcxproj  auto_tester.vcxproj.filters  command_line.vcxproj  command_line.vcxproj.filters  config.h  config.status  configure  configure.ac  general_testing.ps1  libspa.vcxproj  libspa.vcxproj.filters  main.vcxproj  simple3202.sln  spa.vcxproj  spa.vcxproj.filters  test_sibling.cpp  unit_test.vcxproj  unit_test.vcxproj.filters  unit_tests.vcxproj
AutoTester Test files/: Extension_Queries.txt  Final_Source.txt  Final_Test_Cases.txt  Final_Testing_README.txt
Autotest-TestCase/: Final_Test_Cases.txt
autotest/: TestWrapper.cpp  TestWrapper.h
autotestfile/: Final_Source.docx  Final_Test_Cases.txt
docs/: architecture.md
impl/: ast.h  batch.cpp  command_line.cpp  condition.h  expr.cpp  expr.h  frontend.h  linker-cluster.cpp  linker-cluster.h  linker.cpp  linker.h  matcher.cpp  matcher.h  parse_error.h  predicate.cpp  predicate.h  predicate_table.cpp  predicate_table.h  processor.cpp  processor.h  query.h  qvar.h  selector.cpp  selector.h  solver_generator.h  solver_table.cpp  solver_table.h  table_linker.cpp  table_linker.h  visitor_generator.h
impl/parser/: expr_parser.cpp  expr_parser.h  iterator_tokenizer.h  parser.cpp  parser.h  pql_parser.cpp  pql_parser.h  token.cpp  token.h  tokenizer.h
impl/solvers/: affects.cpp  affects.h  assign.cpp  assign.h  call.cpp  call.h  contains.cpp  contains.h  direct_uses.cpp  direct_uses.h  equal.cpp  equal.h  expr.cpp  expr.h  follows.cpp  follows.h  iaffects.cpp  iaffects.h  icall.cpp  icall.h  iexpr.cpp  iexpr.h  ifollows.cpp  ifollows.h  inext.cpp  inext.h  iparent.cpp  iparent.h  modifies.cpp  modifies.h  next.cpp  next.h  next_bip.cpp  next_bip.h  next_cached.cpp  next_cached.h  parent.cpp  parent.h  pattern.cpp  pattern.h  (+6 more)
sample/: autotest-1.xml  example1.simple
simple/: ast.cpp  ast.h  ast_utils.cpp  ast_utils.h  condition.cpp  condition.h  condition_set.cpp  condition_set.h  condition_utils.cpp  condition_utils.h  engine.h  expr.h  linker.h  matcher.h  next.cpp  next.h  predicate.h  query.cpp  query.h  qvar.h  solver.h  spa.cpp  spa.h  tuple.cpp  tuple.h  types.h
simple/solvers/: modifies.h
simple/util/: ast_utils.cpp  ast_utils.h  condition_utils.cpp  condition_utils.h  condition_visitor_generator.h  expr.cpp  expr.h  expr_util.cpp  expr_visitor_generator.h  query_utils.cpp  query_utils.h  set_convert.h  set_utils.h  solver_generator.h  statement_set.h  statement_visitor_generator.h  term_utils.cpp  term_utils.h
spa/: affects.cpp  affects.h  affects_star.cpp  affects_star.h  ast.cpp  ast.h  calls.cpp  calls.h  calls_star.cpp  calls_star.h  cfg.cpp  cfg.h  follows.cpp  follows.h  follows_star.cpp  follows_star.h  modifies.cpp  modifies.h  next.cpp  next.h  next_star.cpp  next_star.h  parent.cpp  parent.h  parent_star.cpp  parent_star.h  pkb.cpp  pkb.h  statement.cpp  statement.h  types.h  uses.cpp  uses.h  var_table.cpp  var_table.h
test/: Makefile.am  Makefile.in  condition_test.cpp  fixture.h  mock.h  test_ast.cpp  test_call.cpp  test_condition.cpp  test_expr.cpp  test_follows.cpp  test_frontend.cpp  test_icall.cpp  test_ifollows.cpp  test_inext.cpp  test_iparent.cpp  test_linker.cpp  test_main.cpp  test_matcher.cpp  test_modifies.cpp  test_next.cpp  test_parent.cpp  test_parser.cpp  test_pql_parser.cpp  test_predicate.cpp  test_processor.cpp  test_query.cpp  test_same_name.cpp  test_sibling.cpp  test_solver.cpp  test_tokenizer.cpp  test_types.cpp  test_uses.cpp
test/fixtures/: basic_queries.h  uses_fixtures.h
test/gtest/: gtest-all.cc  gtest.h
test/spa/: test_uses.cpp
test/system-test/: modifies.simple  system_basic.cpp  system_modifies.cpp
visual_studio/: auto_tester.vcxproj  auto_tester.vcxproj.filters  libspa.vcxproj  libspa.vcxproj.filters  spa.vcxproj  spa.vcxproj.filters  test_uses.cpp  test_uses.h  unit_test.vcxproj  unit_test.vcxproj.filters
